# hitori-srs

./: .gitignore  README.md  pyproject.toml
hitori_srs/: __main__.py  cambridge.py  e2u.py  text.py
hitori_srs/views/: definitions_dialog.py  main_window.py
hitori_srs/views/ui/: definitions_dialog.py  definitions_dialog.ui  main_window.py  main_window.ui
scripts/: ui_to_py.sh
