[tool.pdm]
[tool.pdm.dev-dependencies]

[project]
name = "hitori-srs"
version = "0.1.0"
description = "A small program to help you add cards to Anki more quickly."
authors = [
    {name = "Niko Honu", email = "nikohonu@gmail.com"},
]
dependencies = [
    "pyside6>=6.4.2",
    "requests>=2.28.2",
    "click>=8.1.3",
    "translators>=5.5.6",
    "translatepy>=2.3",
    "pattern>=3.6.0",
    "lxml>=4.9.2",
]
requires-python = "<3.12,>=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
hitori-srs = "hitori_srs.__main__:main"

[tool.pdm.scripts]
hitori-srs = {call = "hitori_srs.__main__:main"}

[tool.pyright]
extraPaths = ["__pypackages__/<major.minor>/lib/"]
