[tool.poetry]
name = "hitori-srs"
version = "0.1.0"
description = "A small program to help you add cards to Anki more quickly."
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hitori_srs"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
PySide6 = "^6.4.2"
requests = "^2.28.2"
click = "^8.1.3"
translatepy = "^2.3"
Pattern = "^3.6.0"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
isort = "^5.12.0"
pyright = "^1.1.292"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hitori-srs = "hitori_srs.__main__:main"

[tool.isort]
profile = "black"
